# ez_commands_c

./: README.md  com.jeb.ez_commands.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.jeb.ez_commands.json/: init
.flatpak-builder/checksums/: x86_64-com.jeb.ez_commands.json
data/: com.jeb.ez_commands.appdata.xml.in  com.jeb.ez_commands.desktop.in  com.jeb.ez_commands.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: build_command_list_item.c  build_command_list_item.h  dialogs.c  dialogs.h  ez_commands-application.c  ez_commands-application.h  ez_commands-window.c  ez_commands-window.h  ez_commands-window.ui  ez_commands.gresource.xml  get_commands_file.c  get_commands_file.h  json_parser.c  json_parser.h  layout.c  layout.h  main.c  meson.build  my_clipboard.c  my_clipboard.h  replace.c  replace.h  theme.css
